unpackaged/main/default/objects/Contract/fields/Price_Guarantee_Language__c.field-meta.xml
<CustomField>
    <fullName>Price_Guarantee_Language__c</fullName>
    <label>Price Guarantee: Language</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>