unpackaged/main/default/objects/Contract/fields/Proposal_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Expiration_Date__c</fullName>
    <label>Proposal Expiration: Date</label>
    <type>Date</type>
</CustomField>