unpackaged/main/default/objects/Contract/fields/Proposal_Expiration_Included__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Expiration_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proposal Expiration: Included?</label>
    <type>Checkbox</type>
</CustomField>