unpackaged/main/default/objects/Contract/fields/Proposal_Expiration_Language__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Expiration_Language__c</fullName>
    <label>Proposal Expiration: Language</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>