unpackaged/main/default/objects/Contract/fields/Proposal_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Order_Number__c</fullName>
    <label>Proposal Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>