unpackaged/main/default/objects/Contract/fields/Proposal_Status__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Status__c</fullName>
    <label>Proposal Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>