unpackaged/main/default/objects/Contract/fields/pw_ccpro__BillingCounty__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__BillingCounty__c</fullName>
    <label>Billing County</label>
    <length>64</length>
    <type>Text</type>
</CustomField>