unpackaged/main/default/objects/Contract/fields/pw_ccpro__ShippingCounty__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__ShippingCounty__c</fullName>
    <label>Shipping County</label>
    <length>64</length>
    <type>Text</type>
</CustomField>