unpackaged/main/default/objects/Contract/fields/Rejected_By__c.field-meta.xml
<CustomField>
    <fullName>Rejected_By__c</fullName>
    <label>Rejected By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>