unpackaged/main/default/objects/Contract/fields/Renewal_Terms_Included__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Terms_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewal Terms: Included?</label>
    <type>Checkbox</type>
</CustomField>