unpackaged/main/default/objects/Contract/fields/RO_Deal_Created_At__c.field-meta.xml
<CustomField>
    <fullName>RO_Deal_Created_At__c</fullName>
    <label>Deal Created At</label>
    <type>DateTime</type>
</CustomField>