unpackaged/main/default/objects/Contract/fields/RO_Deal_Updated_At__c.field-meta.xml
<CustomField>
    <fullName>RO_Deal_Updated_At__c</fullName>
    <label>Deal Updated At</label>
    <type>DateTime</type>
</CustomField>