unpackaged/main/default/objects/Contract/fields/RO_Reject_Reason__c.field-meta.xml
<CustomField>
    <fullName>RO_Reject_Reason__c</fullName>
    <label>Reject Reason</label>
    <type>TextArea</type>
</CustomField>