unpackaged/main/default/objects/Contract/fields/RO_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>RO_Template_Name__c</fullName>
    <label>RevOps Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>