unpackaged/main/default/objects/Contract/fields/Service_Term_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Term_Type__c</fullName>
    <formula>IF( RecordType.Name=&quot;Order Form&quot;,
 CASE( Opportunity__r.RecordType.Name,
  &quot;Renewal&quot;,&quot;Renewal Term&quot;,
  CASE(Opportunity__r.Type ,
   &quot;New Business&quot;,&quot;Initial Service Term&quot;,
   &quot;Pilot&quot;,&quot;Pilot Term&quot;,
   &quot;Existing Business&quot;,&quot;Initial Service Term&quot;,
   &quot;Unknown&quot;
  )
 ),
 &quot;Unknown&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Term Type</label>
    <type>Text</type>
</CustomField>