unpackaged/main/default/objects/Contract/fields/Signature_Page_Terms_Language__c.field-meta.xml
<CustomField>
    <fullName>Signature_Page_Terms_Language__c</fullName>
    <label>Signature Page Terms: Language</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>