unpackaged/main/default/objects/Contract/fields/Signature_Platform__c.field-meta.xml
<CustomField>
    <fullName>Signature_Platform__c</fullName>
    <description>disabled - not signed
docusign - signed via Docusign
revops - signed via RevOps.io
third party - signed via e-signature software that is not Docusign or RevOps.io</description>
    <inlineHelpText>disabled - not signed
docusign - signed via Docusign
revops - signed via RevOps.io
third party - signed via e-signature software that is not Docusign or RevOps.io</inlineHelpText>
    <label>Signature Platform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>