unpackaged/main/default/objects/Contract/fields/Signed_Contract_Source__c.field-meta.xml
<CustomField>
    <fullName>Signed_Contract_Source__c</fullName>
    <description>docusign - signed via Docusign integration
none - not signed
outsideOfRevOps - signed outside of docusign/RevOps.io integration
partiallyOutsideOfRevOps - ammended document that was previously signed by a customer
revopsEsignature - signed via RevOps e-signature</description>
    <inlineHelpText>docusign - signed via Docusign integration
none - not signed
outsideOfRevOps - signed outside of docusign/RevOps.io integration
partiallyOutsideOfRevOps - ammended document that was previously signed by a customer
revopsEsignature - signed via RevOps e-signature</inlineHelpText>
    <label>Signed Contract Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>