unpackaged/main/default/objects/Contract/fields/SoW_Included__c.field-meta.xml
<CustomField>
    <fullName>SoW_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SoW: Included?</label>
    <type>Checkbox</type>
</CustomField>