unpackaged/main/default/objects/Contract/fields/SoW_Subcontractors__c.field-meta.xml
<CustomField>
    <fullName>SoW_Subcontractors__c</fullName>
    <label>SoW: Subcontractors?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Allowed</fullName>
            </value>
            <value>
                <fullName>Allowed with Permission</fullName>
            </value>
            <value>
                <fullName>Not allowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>