unpackaged/main/default/objects/Contract/fields/SoW_Term_Length_mo__c.field-meta.xml
<CustomField>
    <fullName>SoW_Term_Length_mo__c</fullName>
    <label>SoW: Term Length (mo)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>