unpackaged/main/default/objects/Contract/fields/Special_Terms_Included__c.field-meta.xml
<CustomField>
    <fullName>Special_Terms_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Terms: Included?</label>
    <type>Checkbox</type>
</CustomField>