unpackaged/main/default/objects/Contract/fields/Support_Business_Days__c.field-meta.xml
<CustomField>
    <fullName>Support_Business_Days__c</fullName>
    <label>Support: Business Days</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SLA_Business_Days</valueSetName>
    </valueSet>
</CustomField>