unpackaged/main/default/objects/Contract/fields/Support_SLA_Language__c.field-meta.xml
<CustomField>
    <fullName>Support_SLA_Language__c</fullName>
    <label>Support SLA: Language</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>