unpackaged/main/default/objects/Contract/fields/Tax_Exemption_Status__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exemption_Status__c</fullName>
    <label>Tax Exemption Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>