unpackaged/main/default/objects/Contract/fields/Tax_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_Identification_Number__c</fullName>
    <label>Tax Identification Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>