unpackaged/main/default/objects/Contract/fields/TEMP_NEEDS_REVIEW__c.field-meta.xml
<CustomField>
    <fullName>TEMP_NEEDS_REVIEW__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TEMP - NEEDS REVIEW</label>
    <type>Checkbox</type>
</CustomField>