unpackaged/main/default/objects/Contract/fields/Time_Submit_to_First_Approval__c.field-meta.xml
<CustomField>
    <fullName>Time_Submit_to_First_Approval__c</fullName>
    <formula>(First_Approval_At__c - Deal_Desk_Submitted_At__c) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Submit to First Approval</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>