unpackaged/main/default/objects/Contract/fields/Time_to_First_Submit__c.field-meta.xml
<CustomField>
    <fullName>Time_to_First_Submit__c</fullName>
    <formula>(Deal_Desk_Submitted_At__c - RO_Deal_Created_At__c) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to First Submit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>