unpackaged/main/default/objects/Contract/fields/Unenforced_Expiration_Included__c.field-meta.xml
<CustomField>
    <fullName>Unenforced_Expiration_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unenforced Expiration: Included?</label>
    <type>Checkbox</type>
</CustomField>