unpackaged/main/default/objects/Contract/fields/Unlimited_Usage_Option_Annualized_Amt__c.field-meta.xml
<CustomField>
    <fullName>Unlimited_Usage_Option_Annualized_Amt__c</fullName>
    <label>Unlimited Usage Option: Annualized Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>