unpackaged/main/default/objects/Contract/fields/Unlimited_Usage_Option_Included__c.field-meta.xml
<CustomField>
    <fullName>Unlimited_Usage_Option_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unlimited Usage Option: Included?</label>
    <type>Checkbox</type>
</CustomField>