unpackaged/main/default/objects/Contract/recordTypes/DPA.recordType-meta.xml
<RecordType>
    <fullName>DPA</fullName>
    <active>true</active>
    <label>DPA</label>
</RecordType>