unpackaged/main/default/objects/Contract/recordTypes/MNDA.recordType-meta.xml
<RecordType>
    <fullName>MNDA</fullName>
    <active>true</active>
    <label>MNDA</label>
</RecordType>