unpackaged/main/default/objects/Contract/recordTypes/Order_Form.recordType-meta.xml
<RecordType>
    <fullName>Order_Form</fullName>
    <active>true</active>
    <label>Order Form</label>
</RecordType>