unpackaged/main/default/objects/Contract/recordTypes/Other_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Other_Agreement</fullName>
    <active>true</active>
    <label>Other Agreement</label>
</RecordType>