unpackaged/main/default/objects/Contract/recordTypes/Referral_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Referral_Agreement</fullName>
    <active>true</active>
    <label>Referral Agreement</label>
</RecordType>