unpackaged/main/default/objects/Contract/recordTypes/Reseller_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Reseller_Agreement</fullName>
    <active>true</active>
    <label>Reseller Agreement</label>
</RecordType>