unpackaged/main/default/objects/Contract/recordTypes/Service_Delivery_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Service_Delivery_Agreement</fullName>
    <active>true</active>
    <label>Service Delivery Agreement</label>
</RecordType>