unpackaged/main/default/objects/Contract/validationRules/trap_payment_terms.validationRule-meta.xml
<ValidationRule>
    <fullName>trap_payment_terms</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Payment_Terms__c) &amp;&amp;
ISPICKVAL(Payment_Terms__c,&quot;&quot;)</errorConditionFormula>
    <errorMessage>If you get this error, tell Jon (Payment term blank bug)</errorMessage>
</ValidationRule>